[project]
name = "missing-tool"
description = "NODES: TrimBG, TrimBG Advanced, Image Queue Loader, Load Image Alpha.\nA few tools for ComfyUI, perhaps it's exactly what you need."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/ifmylove2011/comfyui-missing-tool"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-missing-tool"
Icon = ""
